force-app/main/default/objects/Knowledge__kav/fields/Article_Body__c.field-meta.xml
<CustomField>
    <fullName>Article_Body__c</fullName>
    <description>Details of Knowledge base Article - can include text, images and links</description>
    <inlineHelpText>Details of Knowledge base Article - can include text, images and links</inlineHelpText>
    <label>Article Body</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>