force-app/main/default/objects/Knowledge__kav/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <description>Audience for Help Center filtering</description>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Ubiquity Basics &amp; FAQs</fullName>
            </value>
            <value>
                <fullName>Video Library</fullName>
            </value>
            <value>
                <fullName>TPA</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
                <isActive>false</isActive>
                <label>Sponsor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>