force-app/main/default/objects/Knowledge__kav/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category for Help Centers</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>401(k) Compliance Essentials</fullName>
            </value>
            <value>
                <fullName>Account Access</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Advisor Plan Management</fullName>
            </value>
            <value>
                <fullName>Annual Plan Reporting</fullName>
            </value>
            <value>
                <fullName>Annual Plan Testing</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Compliance for Advisors</fullName>
            </value>
            <value>
                <fullName>Compliance for Employers</fullName>
            </value>
            <value>
                <fullName>Compliance for Participants</fullName>
            </value>
            <value>
                <fullName>Compliance for Single(k)</fullName>
            </value>
            <value>
                <fullName>Compliance for TPAs</fullName>
            </value>
            <value>
                <fullName>Contacting Support</fullName>
            </value>
            <value>
                <fullName>Contacting Ubiquity</fullName>
            </value>
            <value>
                <fullName>Eligibility for Participation</fullName>
            </value>
            <value>
                <fullName>FAQs</fullName>
            </value>
            <value>
                <fullName>Funding a Retirement Plan</fullName>
            </value>
            <value>
                <fullName>Funding Your 401(k)</fullName>
            </value>
            <value>
                <fullName>Funding Your Retirement Plan</fullName>
            </value>
            <value>
                <fullName>Funding Your Single(k) Plan</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>General Questions</fullName>
            </value>
            <value>
                <fullName>Getting Started</fullName>
            </value>
            <value>
                <fullName>How-Tos</fullName>
            </value>
            <value>
                <fullName>Investments &amp; Growth</fullName>
            </value>
            <value>
                <fullName>Managing Money Out</fullName>
            </value>
            <value>
                <fullName>Managing the Plan</fullName>
            </value>
            <value>
                <fullName>Managing Withdrawals</fullName>
            </value>
            <value>
                <fullName>Managing Your Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>