force-app/main/default/objects/Knowledge__kav/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Used to determine which Help Center(s) the article will appear in.</description>
    <label>Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Login Ubiquity</fullName>
            </value>
            <value>
                <fullName>Post-Login Ubiquity</fullName>
            </value>
            <value>
                <fullName>Post-Login Simply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>