force-app/main/default/objects/Knowledge__kav/fields/Chat_Answer__c.field-meta.xml
<CustomField>
    <fullName>Chat_Answer__c</fullName>
    <description>Answer displayed in chatbot</description>
    <inlineHelpText>Answer displayed in chatbot</inlineHelpText>
    <label>Chat Answer</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>