force-app/main/default/objects/Knowledge__kav/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>Sub-Category for Help Center</description>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>402(g) Refunds</fullName>
            </value>
            <value>
                <fullName>Account Access</fullName>
            </value>
            <value>
                <fullName>ADP/ACP Testing</fullName>
            </value>
            <value>
                <fullName>Advisor Portal Guidance</fullName>
            </value>
            <value>
                <fullName>Advisor Reporting</fullName>
            </value>
            <value>
                <fullName>Annual Reporting</fullName>
            </value>
            <value>
                <fullName>Annual Testing</fullName>
            </value>
            <value>
                <fullName>Annual Testing Support</fullName>
            </value>
            <value>
                <fullName>Approving Withdrawals</fullName>
            </value>
            <value>
                <fullName>Approving Withdrawals for TPAs</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Billing &amp; Fees</fullName>
            </value>
            <value>
                <fullName>Choosing Funds</fullName>
            </value>
            <value>
                <fullName>Compliance Explainers</fullName>
            </value>
            <value>
                <fullName>Contribution Limits</fullName>
            </value>
            <value>
                <fullName>Contributions</fullName>
            </value>
            <value>
                <fullName>Deadlines</fullName>
            </value>
            <value>
                <fullName>Distribution Requests</fullName>
            </value>
            <value>
                <fullName>Distributions</fullName>
            </value>
            <value>
                <fullName>Documentation Requirements</fullName>
            </value>
            <value>
                <fullName>Eligibility</fullName>
            </value>
            <value>
                <fullName>Employee and Employer Contributions</fullName>
            </value>
            <value>
                <fullName>Employee Contributions</fullName>
            </value>
            <value>
                <fullName>Employee Payroll Contributions</fullName>
            </value>
            <value>
                <fullName>Employer Contributions</fullName>
            </value>
            <value>
                <fullName>Employer Plan Reporting</fullName>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>Filing Support</fullName>
            </value>
            <value>
                <fullName>Forfeitures</fullName>
            </value>
            <value>
                <fullName>Form 5500-EZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>