force-app/main/default/objects/Knowledge__kav/fields/Team_Category__c.field-meta.xml
<CustomField>
    <fullName>Team_Category__c</fullName>
    <description>Team who wrote/developed the knowledge article</description>
    <inlineHelpText>Team who wrote/developed the knowledge article</inlineHelpText>
    <label>Team Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>BizIntel</fullName>
            </value>
            <value>
                <fullName>Client Experience</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>CST</fullName>
            </value>
            <value>
                <fullName>Distributions</fullName>
            </value>
            <value>
                <fullName>Implementations</fullName>
            </value>
            <value>
                <fullName>Learning + Development</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Product Success</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Saver</fullName>
            </value>
            <value>
                <fullName>SingleK</fullName>
            </value>
            <value>
                <fullName>Transitions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>