force-app/main/default/objects/Knowledge__kav/listViews/published_articles.listView-meta.xml
<ListView>
    <fullName>published_articles</fullName>
    <columns>TITLE</columns>
    <columns>NEXT_REVIEW_DATE</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>IS_CHANNEL_PKB</columns>
    <columns>ARTICLE_TOTAL_VIEW_COUNT</columns>
    <columns>Answer__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Audience__c</columns>
    <columns>PUBLISH_STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>notEqual</operation>
        <value>3</value>
    </filters>
    <filters>
        <field>TITLE</field>
        <operation>contains</operation>
        <value>late</value>
    </filters>
    <label>Published Articles</label>
</ListView>